<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cl_news_item"
    android:layout_marginBottom="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <mtiui.dtpl.sicovid.widget.NotoText
        android:id="@+id/tv_label_kecamatan"
        android:text="@string/label_kecamatan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_label_treated"
        android:layout_marginEnd="12dp"
        android:layout_width="0dp"
        android:textSize="12sp"
        android:textColor="@color/grey1"
        android:layout_height="wrap_content"/>

    <mtiui.dtpl.sicovid.widget.NotoText
        android:id="@+id/tv_label_treated"
        android:text="@string/status_treated"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_label_healed"
        android:layout_marginEnd="8dp"
        android:layout_width="60dp"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="@color/grey1"
        android:layout_height="wrap_content"/>

    <mtiui.dtpl.sicovid.widget.NotoText
        android:id="@+id/tv_label_healed"
        android:text="@string/status_healed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_label_death"
        android:layout_marginEnd="8dp"
        android:layout_width="60dp"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="@color/grey1"
        android:layout_height="wrap_content"/>

    <mtiui.dtpl.sicovid.widget.NotoText
        android:id="@+id/tv_label_death"
        android:text="@string/status_death"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="64dp"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="@color/grey1"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>