<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.beritadetail.BeritaDetailActivity">

    <include
        android:id="@+id/toolbar_detail_berita_item"
        layout="@layout/detail_berita_toolbar"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        app:layout_constraintStart_toStartOf="@id/toolbar_detail_berita_item"
        app:layout_constraintEnd_toEndOf="@id/toolbar_detail_berita_item"
        app:layout_constraintTop_toBottomOf="@id/toolbar_detail_berita_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.makeramen.roundedimageview.RoundedImageView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:id="@+id/img_banner_berita"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:riv_corner_radius="8dp"
                android:src="@drawable/covid_headline"
                android:scaleType="centerCrop"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                />

            <TextView
                app:layout_constraintStart_toStartOf="@id/img_banner_berita"
                app:layout_constraintEnd_toEndOf="@id/img_banner_berita"
                app:layout_constraintTop_toBottomOf="@id/img_banner_berita"

                android:id="@+id/title_berita"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/st_title_berita_detail"
                android:fontFamily="@font/notosans_medium"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                app:layout_constraintStart_toStartOf="@id/title_berita"
                app:layout_constraintEnd_toEndOf="@id/title_berita"
                app:layout_constraintTop_toBottomOf="@id/title_berita"

                android:id="@+id/info_berita"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/st_info_berita_detail"
                android:fontFamily="@font/notosans_regular"
                android:textSize="12sp"
                android:textColor="@color/grey_text"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:id="@+id/konten_berita"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"
                android:fontFamily="@font/notosans_regular"
                android:text="@string/st_konten_berita_detail"
                android:textColor="@color/grey_text"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/info_berita"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/info_berita"
                app:layout_constraintTop_toBottomOf="@id/info_berita" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>